namespace Ergonaut.Core.Models
{
    public enum SourceLabel
    {
        Ergonaut = 0
    }
}
