namespace Ergonaut.Core.Models.WorkItem
{
    /// <summary>
    /// Defines the priority levels for work items.
    /// </summary>
    public enum WorkItemPriority
    {
        Low,
        Medium,
        High
    }
}
