namespace Ergonaut.Core.Models.WorkItem
{
    /// <summary>
    /// Defines the various statuses a work item can have in its lifecycle.
    /// </summary>
    public enum WorkItemStatus
    {
        New,
        InProgress,
        Done
    }
}
