using Ergonaut.Core.Models.WorkItem;

namespace Ergonaut.Core.Repositories;

public interface IWorkItemRepository
{
    Task<IWorkItem?> GetAsync(Guid id, CancellationToken ct = default);
    Task<IReadOnlyList<IWorkItem>> ListAsync(CancellationToken ct = default);
    Task<IReadOnlyList<IWorkItem>> ListByProjectAsync(Guid projectId, CancellationToken ct = default);
    Task<IWorkItem> AddAsync(IWorkItem workItem, CancellationToken ct = default);
    Task<IWorkItem> UpdateAsync(IWorkItem workItem, CancellationToken ct = default);
    Task DeleteAsync(Guid id, CancellationToken ct = default);
}
